// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`funds getter is set should display correct funds with messages 1`] = `
<div class="card p-4">
  <h1 class="h2">Trade or View your Portfolio</h1>
  <small>You may Save &amp; Load your Data</small>
  <small>Click on "End Day" to begin a new Day!</small>
  <hr> <strong>Your Funds: $100,000</strong></div>
`;

exports[`funds getter is set should display correct funds with messages 2`] = `
<div class="card p-4">
  <h1 class="h2">Trade or View your Portfolio</h1>
  <small>You may Save &amp; Load your Data</small>
  <small>Click on "End Day" to begin a new Day!</small>
  <hr> <strong>Your Funds: $9,000</strong></div>
`;
